<resources>
    <string name="app_name" translatable="false">Switch Hub</string>

    <!-- Menu -->
    <string name="sort">Sort</string>
    <string name="sort_by_featured">Featured</string>
    <string name="sort_by_title">By title</string>
    <string name="sort_by_release_date">By release date</string>
    <string name="sort_by_lowest_price">By price ($)</string>
    <string name="sort_by_highest_price">By price ($$$)</string>
    <string name="refresh">Refresh</string>
    <!-- deps: my_games_no_games_suggestion -->
    <string name="settings">Settings</string>

    <!-- MainActivity -->
    <string name="games">Games</string>
    <string name="my_lists">My lists</string>

    <!-- LoadingGamesFragment -->
    <string name="loading_games">Loading games…</string>
    <string name="loading_games_failed_message">There was a problem loading the games.</string>
    <string name="loading_games_failed_suggestion">Make sure your device is connected to the Internet.</string>
    <string name="try_again">Try again</string>

    <!-- GamesFragment -->
    <string name="front_box_art_description">Game front box art</string>
    <string name="price_unavailable">Price unavailable</string>
    <string name="wishlist_button_description">Wish list button</string>
    <string name="no_games_found">No games found.</string>

    <!-- GameDetailsFragment -->
    <string name="no_game_title">Title unspecified</string>
    <string name="no_price">Price unspecified</string>
    <string name="no_release_date">Release date unspecified</string>
    <string name="no_number_of_players">Number of players unspecified</string>
    <string name="no_categories">Categories unspecified</string>
    <string name="choose_list">Choose a list</string>
    <string name="wish_list">Wish list</string>
    <!-- deps: display_my_games_summary -->
    <string name="my_games_list">My games</string>
    <string name="hidden_games_list">Hidden games</string>
    <string name="no_list">No list</string>
    <string name="hidden_game_warning">This game is hidden. You won\'t be able to access it from the main screen.</string>

    <!-- FrontBoxArtFragment -->
    <string name="front_box_art_fullscreen_description">Game front box art in fullscreen</string>

    <!-- WishListFragment -->
    <string name="wish_list_no_games_suggestion">You will be notified of the games added to this list when their prices get lower or when they become available (for unreleased games).</string>

    <!-- MyGamesFragment -->
    <string name="my_games_no_games_suggestion">On this list, you\'ll be able to see the games you already own. You can also hide these same games from the main games listing by unchecking the option in the menu \"Settings\" > \"Show games I already own\".</string>

    <!-- HiddenGamesFragment -->
    <string name="hidden_games_no_games_suggestion">The games added to this list won\'t be shown on the main games listing.</string>

    <!-- SettingsFragment -->
    <!-- deps: my_games_no_games_suggestion -->
    <string name="display_my_games_title">Show games I already own</string>
    <string name="display_my_games_summary">Games added to the list \"My games\" won\'t be hidden when displaying all games</string>
</resources>
