<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_by_featured"
                    android:title="@string/sort_by_featured" />
                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/sort_by_title" />
                <item
                    android:id="@+id/sort_by_release_date"
                    android:title="@string/sort_by_release_date" />
                <item
                    android:id="@+id/sort_by_lowest_price"
                    android:title="@string/sort_by_lowest_price" />
                <item
                    android:id="@+id/sort_by_highest_price"
                    android:title="@string/sort_by_highest_price" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
