<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/front_box_art"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_black"
            android:contentDescription="@string/front_box_art_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="@dimen/game_details_activity_margin"
            android:layout_marginStart="@dimen/game_details_activity_margin"
            android:paddingTop="@dimen/game_details_activity_margin"
            android:text="@string/no_game_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toBottomOf="@+id/front_box_art"
            app:layout_constraintBottom_toTopOf="@id/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/game_details_activity_margin"
            android:layout_marginStart="@dimen/game_details_activity_margin"
            android:layout_marginTop="@dimen/game_details_between_lines"
            android:drawableStart="@drawable/ic_price"
            android:drawablePadding="@dimen/game_details_drawable_text_padding"
            android:gravity="center_vertical"
            android:text="@string/no_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/game_details_activity_margin"
            android:layout_marginStart="@dimen/game_details_activity_margin"
            android:layout_marginTop="@dimen/game_details_between_lines"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="@dimen/game_details_drawable_text_padding"
            android:gravity="center_vertical"
            android:text="@string/no_release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintBottom_toTopOf="@id/number_of_players"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/number_of_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/game_details_activity_margin"
            android:layout_marginStart="@dimen/game_details_activity_margin"
            android:layout_marginTop="@dimen/game_details_between_lines"
            android:drawableStart="@drawable/ic_player"
            android:drawablePadding="@dimen/game_details_drawable_text_padding"
            android:gravity="center_vertical"
            android:text="@string/no_number_of_players"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/release_date"
            app:layout_constraintBottom_toTopOf="@id/categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/game_details_activity_margin"
            android:layout_marginStart="@dimen/game_details_activity_margin"
            android:layout_marginTop="@dimen/game_details_between_lines"
            android:drawableStart="@drawable/ic_category"
            android:drawablePadding="@dimen/game_details_drawable_text_padding"
            android:gravity="center_vertical"
            android:text="@string/no_categories"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/number_of_players"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>